--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,6 +9,7 @@
     <link href="/assets/css/style.css" rel='stylesheet' type='text/css'/>
     <link href="/assets/css/flexslider.css" rel='stylesheet' type='text/css'/>
     <link href="/assets/css/animate.css" rel='stylesheet' type='text/css'/>
+    <link href="/assets/css/score.css" rel='stylesheet' type='text/css'/>
 
 </head>
 <body>
@@ -73,19 +74,22 @@
                                 <h4><span class="m_3"><%= locals.users[i].username%></span></h4>
                                 <img src="<%= locals.users[i].profil_img != 0 ? `assets/img/${locals.users[i].profil_img}` : "http://ssl.gstatic.com/accounts/ui/avatar_2x.png" %>"
                                      class="img-responsive" alt="" style="width: 100%;">
-                                <ul class="category_desc">
-                                    <li class="cate_head">Mettre score</li>
-                                    <li class="cate_right">
-                                        <ul class="list1">
-                                            <li><i class="heart"> </i></li>
-                                            <li><i class="heart"> </i></li>
-                                            <li><i class="heart"> </i></li>
-                                        </ul>
-                                    </li>
+                                <ul class="category_desc1">
+                                    <% if(locals.users[i].score != 0){ %>
+                                        <li class="cate_head">Score:
+                                            <% for(let j = 0; j < locals.users[i].score; j++){ %>
+                                                <label style="color: #fff;">&#9733;</label>
+                                            <% } %>
+                                        </li>
+                                    <% }else{ %>
+                                        <li class="cate_head" style="height: 30px">No score</li>
+                                    <% } %>
                                     <div class="clearfix"></div>
                                 </ul>
-                                <h5>Full Profile</h5>
                             </a></div>
+                        <br>
+                        <br>
+
                     </div>
                     <% }; %>
                     <div class="clearfix"></div>
@@ -100,18 +104,18 @@
                                 <h4><span class="m_3"><%= locals.suggestion[i].username %></span></h4>
                                 <img src="<%= locals.suggestion[i].profil_img != 0 ? `assets/img/${locals.suggestion[i].profil_img}` : "http://ssl.gstatic.com/accounts/ui/avatar_2x.png" %>"
                                      class="img-responsive" alt="" style="width: 100%">
-                                <ul class="category_desc">
-                                    <li class="cate_head">Mettre score</li>
-                                    <li class="cate_right">
-                                        <ul class="list1">
-                                            <li><i class="heart"> </i></li>
-                                            <li><i class="heart"> </i></li>
-                                            <li><i class="heart"> </i></li>
-                                        </ul>
-                                    </li>
+                                <ul class="category_desc1">
+                                    <% if(locals.users[i].score != 0){ %>
+                                        <li class="cate_head">Score:
+                                            <% for(let j = 0; j < locals.users[i].score; j++){ %>
+                                                <label style="color: #fff;">&#9733;</label>
+                                            <% } %>
+                                        </li>
+                                    <% }else{ %>
+                                        <li class="cate_head" style="height: 30px">No score</li>
+                                    <% } %>
                                     <div class="clearfix"></div>
                                 </ul>
-                                <h5>Full Profile</h5>
                             </a></div>
                     </div>
                     <% }; %>
