--- a/views/profil.ejs
+++ b/views/profil.ejs
@@ -10,12 +10,13 @@
     <link href="/assets/css/bootstrap.css" rel='stylesheet' type='text/css'/>
     <link href="/assets/css/style.css" rel='stylesheet' type='text/css'/>
     <link href="/assets/css/gallery.css" rel='stylesheet' type='text/css'/>
-    <link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <script src="/node_modules/jquery/dist/jquery.min.js" language="JavaScript"></script>
-    <script src="/assets/js/gallery.js" language="JavaScript"></script>
+    <link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'/>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"/>
+    <link href="/node_modules/bootstrap-slider/dist/css/bootstrap-slider.min.css" rel='stylesheet' type='text/css'/>
+
 
 </head>
+<body>
 <div class="header">
     <div class='container'>
         <div class="header_left">
@@ -143,7 +144,7 @@
                         <ul id="photo-gallery">
                             <li>
                                 <% for (let i = 0; i < locals.files_img.length; i++) { /*locals.files_img.forEach(function(el, index){ */%>
-                                    <img src="<%= locals.files_img[i] != 'undefined' ? `${locals.files_img[i] }` : "http://ssl.gstatic.com/accounts/ui/avatar_2x.png"%>">
+                                <img src="<%= locals.files_img[i] != 'undefined' ? `${locals.files_img[i]}` : "http://ssl.gstatic.com/accounts/ui/avatar_2x.png" %>">
                                 <% };%>
                             </li>
                         </ul>
@@ -162,114 +163,137 @@
                 <div class="tab-pane" id="settings">
                     <h2></h2>
                     <hr>
-                        <div class="form-group">
-                            <div class="col-xs-6">
-                                <label for="first_name"><h4>First name</h4></label>
-                                <input type="text" class="form-control" name="first_name" id="first_name"
-                                       placeholder="<%= locals.first_name %>" title="Enter your first name">
-                            </div>
+                    <div class="form-group">
+                        <div class="col-xs-6">
+                            <label for="first_name"><h4>First name</h4></label>
+                            <input type="text" class="form-control" name="first_name" id="first_name"
+                                   placeholder="<%= locals.first_name %>" title="Enter your first name">
                         </div>
-                        <div class="form-group">
-                            <div class="col-xs-6">
-                                <label for="last_name"><h4>Last name</h4></label>
-                                <input type="text" class="form-control" name="last_name" id="last_name"
-                                       placeholder="<%= locals.last_name %>" title="Enter your last name">
-                            </div>
+                    </div>
+                    <div class="form-group">
+                        <div class="col-xs-6">
+                            <label for="last_name"><h4>Last name</h4></label>
+                            <input type="text" class="form-control" name="last_name" id="last_name"
+                                   placeholder="<%= locals.last_name %>" title="Enter your last name">
                         </div>
-                        <div class="form-group">
-                            <div class="col-xs-6">
-                                <label for="Username"><h4>Username</h4></label>
-                                <input type="text" class="form-control" name="username" id="username"
-                                       placeholder="<%= locals.username %>"
-                                       title="Enter your username if any.">
-                            </div>
+                    </div>
+                    <div class="form-group">
+                        <div class="col-xs-6">
+                            <label for="Username"><h4>Username</h4></label>
+                            <input type="text" class="form-control" name="username" id="username"
+                                   placeholder="<%= locals.username %>"
+                                   title="Enter your username if any.">
                         </div>
-                        <div class="form-group">
-                            <div class="col-xs-6">
-                                <label for="email"><h4>Email</h4></label>
-                                <input type="email" class="form-control" name="email" id="email"
-                                       placeholder="<%= locals.email %>" title="Enter your email.">
-                            </div>
+                    </div>
+                    <div class="form-group">
+                        <div class="col-xs-6">
+                            <label for="email"><h4>Email</h4></label>
+                            <input type="email" class="form-control" name="email" id="email"
+                                   placeholder="<%= locals.email %>" title="Enter your email.">
                         </div>
-                        <div class="form-group">
-                            <div class="col-xs-6">
-                                <label for="sex-orient"><h4>Sexual orientation</h4></label>
-                                <select id="orientation" class="dropdown" tabindex="10"
-                                        data-settings='{"wrapperClass":"metro1"}'>
-                                    <option value="">Select</option>
-                                    <option value="Heterosexual">Heterosexual</option>
-                                    <option value="Homosexual">Homosexual</option>
-                                    <option value="Bisexual">Bisexual</option>
-                                </select>
-                            </div>
+                    </div>
+                    <div class="form-group">
+                        <div class="col-xs-6">
+                            <label for="sex-orient"><h4>Sexual orientation</h4></label>
+                            <select id="orientation" class="dropdown" tabindex="10"
+                                    data-settings='{"wrapperClass":"metro1"}'>
+                                <option value="">Select</option>
+                                <option value="Heterosexual">Heterosexual</option>
+                                <option value="Homosexual">Homosexual</option>
+                                <option value="Bisexual">Bisexual</option>
+                            </select>
                         </div>
-                        <div class="form-group">
-                            <div class="col-xs-6">
-                                <label for="gender"><h4>Gender</h4></label>
-                                <select id="gender" class="dropdown" tabindex="10"
-                                        data-settings='{"wrapperClass":"metro1"}'>
-                                    <option value="">Select</option>
-                                    <option value="Female">Female</option>
-                                    <option value="Male">Male</option>
-                                </select>
-                            </div>
+                    </div>
+                    <div class="form-group">
+                        <div class="col-xs-6">
+                            <label for="gender"><h4>Gender</h4></label>
+                            <select id="gender" class="dropdown" tabindex="10"
+                                    data-settings='{"wrapperClass":"metro1"}'>
+                                <option value="">Select</option>
+                                <option value="Female">Female</option>
+                                <option value="Male">Male</option>
+                            </select>
                         </div>
-                        <div class="form-group">
-                            <div class="col-xs-6">
-                                <label for="bio"><h4>Bio</h4></label>
-                                <input type="text" class="form-control" id="bio" placeholder="<%= locals.bio %>"
-                                       title="Enter your bio">
-                            </div>
+                    </div>
+                    <div class="form-group">
+                        <div class="col-xs-6">
+                            <label for="bio"><h4>Bio</h4></label>
+                            <input type="text" class="form-control" id="bio" placeholder="<%= locals.bio %>"
+                                   title="Enter your bio">
                         </div>
-                        <div class="form-group">
-                            <div class="col-xs-6">
-                                <label for="tags"><h4>Tags</h4></label>
-                                <input type="text" class="form-control" id="tags" placeholder="<%= locals.tags %>"
-                                       title="Choose your tags">
-                            </div>
+                    </div>
+                    <div class="form-group">
+                        <div class="col-xs-6">
+                            <label for="tags"><h4>Tags</h4></label>
+                            <input type="text" class="form-control" id="tags" placeholder="<%= locals.tags %>"
+                                   title="Choose your tags">
                         </div>
-                        <div class="form-group">
-                            <div class="col-xs-6">
-                                <label for="distance"><h4 id="distanceText">Distance: <%= locals.distance %> (Km)</h4>
-                                </label>
-                                <input type="range" class="form-control" id="distance" value="<%= locals.distance %>"
-                                       min="5" max="50" step="5"
-                                       title="Enter your distance search area"
-                                       onchange="updateTextDistance(this.value);">
-                            </div>
+                    </div>
+                    <div class="form-group">
+                        <div class="col-xs-6">
+                            <label for="distance"><h4 id="distanceText">Distance: <%= locals.distance %> (Km)</h4>
+                            </label>
+                            <input type="range" class="form-control" id="distance" value="<%= locals.distance %>"
+                                   min="5" max="50" step="5"
+                                   title="Enter your distance search area"
+                                   onchange="updateTextDistance(this.value);">
                         </div>
-                        <div class="form-group">
-                            <div class="col-xs-6">
-                                <label for="age"><h4 id="ageText">Age: <%= locals.age %> </h4></label>
-                                <input type="range" min="18" max="100" class="form-control" name="age" id="age"
-                                       value="<%= locals.age %>" title="Enter your age."
-                                       onchange="updateTextAge(this.value);">
-                            </div>
+                    </div>
+                    <div class="form-group">
+                        <div class="col-xs-6">
+                            <label for="age"><h4 id="ageText">Age: <%= locals.age %> </h4></label>
+                            <input type="range" min="18" max="100" class="form-control" name="age" id="age"
+                                   value="<%= locals.age %>" title="Enter your age."
+                                   onchange="updateTextAge(this.value);">
                         </div>
-                        <div class="form-group">
-                            <div class="col-xs-6">
-                                <label for="password"><h4>Password *</h4></label>
-                                <input type="password" class="form-control" name="password" id="password"
-                                       placeholder="******" title="Enter your password.">
-                            </div>
+                    </div>
+                    <div class="form-group">
+                        <div class="col-xs-6">
+                            <label for="password"><h4>Password *</h4></label>
+                            <input type="password" class="form-control" name="password" id="password"
+                                   placeholder="******" title="Enter your password.">
                         </div>
-                        <div class="form-group">
-                            <div class="col-xs-6">
-                                <label for="password2"><h4>Verify *</h4></label>
-                                <input type="password" class="form-control" name="password2" id="password2"
-                                       placeholder="******" title="Confirm your password.">
-                            </div>
+                    </div>
+                    <div class="form-group">
+                        <div class="col-xs-6">
+                            <label for="password2"><h4>Verify *</h4></label>
+                            <input type="password" class="form-control" name="password2" id="password2"
+                                   placeholder="******" title="Confirm your password.">
                         </div>
-                        <div class="form-group">
-                            <div class="col-xs-12">
-                                <br>
-                                <button id="save" class="btn btn-lg btn-success" type="submit"><i
-                                            class="glyphicon glyphicon-ok-sign"></i> Save
-                                </button>
-                                <button class="btn btn-lg" type="reset"><i class="glyphicon glyphicon-repeat"></i> Reset
-                                </button>
-                            </div>
+                    </div>
+
+                    <div class="form-group">
+                        <div class="col-xs-6">
+                            <label for="ageRangeMin"><h4 id="ageTextRangeMin"> Age Range
+                                                                               Minimal: <%= locals.ageRangeMin %></h4>
+                            </label>
+                            <input type="range" class="form-control" name="ageRangeMin" id="ageRangeMin"
+                                   value="<%= locals.ageRangeMin %>" min="18" max="100"
+                                   onchange="updateTextAgeRangeMin(this.value);">
                         </div>
+                    </div>
+
+                    <div class="form-group">
+                        <div class="col-xs-6">
+                            <label for="ageRangeMax"><h4 id="ageTextRangeMax">Age Range
+                                                                              Maximal: <%= locals.ageRangeMax %></h4>
+                            </label>
+                            <input type="range" class="form-control" name="ageRangeMax" id="ageRangeMax"
+                                   value="<%= locals.ageRangeMax %>" min="18" max="100"
+                                   onchange="updateTextAgeRangeMax(this.value);">
+                        </div>
+                    </div>
+
+                    <div class="form-group">
+                        <div class="col-xs-12">
+                            <br>
+                            <button id="save" class="btn btn-lg btn-success" type="submit"><i
+                                        class="glyphicon glyphicon-ok-sign"></i> Save
+                            </button>
+                            <button class="btn btn-lg" type="reset"><i class="glyphicon glyphicon-repeat"></i> Reset
+                            </button>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -292,6 +316,9 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js" language="JavaScript"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" language="JavaScript"></script>
 <script src="/assets/js/profil.js" language="JavaScript"></script>
+<script src="/node_modules/jquery/dist/jquery.min.js" language="JavaScript"></script>
+<script src="/assets/js/gallery.js" language="JavaScript"></script>
+<script src="/node_modules/bootstrap-slider/dist/bootstrap-slider.min.js" language="JavaScript"></script>
 
 </body>
 </html>
