--- a/views/validation.ejs
+++ b/views/validation.ejs
@@ -3,10 +3,6 @@
 
     <title>Matcha | Login</title>
 
-    <noscript>
-        <meta http-equiv="refresh" content="0; url=/nojs"/>
-    </noscript>
-
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
     <link href="/assets/css/bootstrap.css" rel='stylesheet' type='text/css'/>
@@ -40,7 +36,7 @@
 </div>
 <div class="profile_banner">
     <div class="container">
-        <h3>Login</h3>
+        <h3>Validation</h3>
     </div>
 </div>
 <div class='profiles'>
@@ -52,47 +48,15 @@
             <%if (locals.success){%>
             <div class="alert alert-success"><%=locals.success%></div>
             <%}%>
-            <div class="col-md-6 login-left">
-                <h3>NEW CUSTOMERS</h3>
-                <p>By creating an account with our store, you will be able to move through the checkout process faster,
-                   store multiple shipping addresses, view and track your orders in your account and more.</p>
-                <a class="acount-btn" href="/register">Create an Account</a>
-            </div>
-            <div class="col-md-6 login-right">
-                <h3>REGISTERED CUSTOMERS</h3>
-                <p>If you have an account with us, please log in.</p>
-
-                <form>
-                    <div>
-                        <span>Email Address<label>*</label></span>
-                        <input id="login_email" type="text">
-                    </div>
-                    <div>
-                        <span>Password<label>*</label></span>
-                        <input id="login_password" type="password">
-                    </div>
-                    <a class="forgot" href="/forgot">Forgot Your Password?</a>
-                    <input id="loginButton" type="submit" value="Login">
-                </form>
-            </div>
-            <div class="clearfix"></div>
-        </div>
-    </div>
-</div>
 <div class="footer">
     <div class="container">
         <div class="copy wow fadeInUp" data-wow-delay="0.4s">
             <p>&copy; 2018 Matcha</p>
         </div>
-        <div class="social wow fadeInRight" data-wow-delay="0.4s">
-            <ul class="footer_social">
-                <li><a href="#"> <i class="fb"> </i> </a></li>
-                <li><a href="#"> <i class="tw"> </i> </a></li>
-            </ul>
-        </div>
         <div class='clearfix'></div>
     </div>
 </div>
+        </div></div></div>
 </body>
 <script src="http://localhost:8080/socket.io/socket.io.js" language="JavaScript"></script>
 <script src="/node_modules/jquery/dist/jquery.min.js" language="JavaScript"></script>
