--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -130,7 +130,7 @@
 	<div class="content">
 		<div class="contact-profile">
 			<img  src="http://emilcarlsson.se/assets/harveyspecter.png" alt="" />
-			<p id="Userto"></p>
+			<p id="Userto"><%= locals.link%></p>
 			<div class="social-media">
 				<i class="fa fa-facebook" aria-hidden="true"></i>
 				<i class="fa fa-twitter" aria-hidden="true"></i>
