--- a/views/profil.ejs
+++ b/views/profil.ejs
@@ -13,6 +13,7 @@
     <link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'/>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"/>
     <link href="/node_modules/bootstrap-slider/dist/css/bootstrap-slider.min.css" rel='stylesheet' type='text/css'/>
+    <link href="/assets/css/profil.css" rel='stylesheet' type='text/css'/>
     <script src="/assets/js/gallery.js" language="JavaScript"></script>
 
 </head>
@@ -96,6 +97,7 @@
                 <li><a data-toggle="tab" href="#settings">Parametres</a></li>
                 <li><a data-toggle="tab" href="#gallery">Gallery</a></li>
                 <li><a data-toggle="tab" href="#users">Users that have liked your profil</a></li>
+                <li><a data-toggle="tab" href="#visits">Users that have visited your profil</a></li>
             </ul>
             <div class="tab-content">
                 <div class="tab-pane active" id="home">
@@ -349,6 +351,53 @@
                             <button class="btn btn-lg" type="reset"><i class="glyphicon glyphicon-repeat"></i> Reset
                             </button>
                         </div>
+                    </div>
+                </div>
+                <div class="tab-pane" id="visits">
+                    <div class="table-users">
+                        <div class="headerr">Users</div>
+
+                        <table cellspacing="0">
+                            <tr>
+                                <th>Picture</th>
+                                <th>Name</th>
+                                <th>Age</th>
+                                <th>Distance</th>
+                                <th width="230">Bio</th>
+                            </tr>
+
+                            <tr>
+                                <td><img src="http://lorempixel.com/100/100/people/1" alt="" /></td>
+                                <td>Jane Doe</td>
+                                <td>jane.doe@foo.com</td>
+                                <td>01 800 2000</td>
+                                <td>Lorem ipsum dolor sit amet, consectetur adipisicing elit. </td>
+                            </tr>
+
+                            <tr>
+                                <td><img src="http://lorempixel.com/100/100/sports/2" alt="" /></td>
+                                <td>John Doe</td>
+                                <td>john.doe@foo.com</td>
+                                <td>01 800 2000</td>
+                                <td>Blanditiis, aliquid numquam iure voluptatibus ut maiores explicabo ducimus neque, nesciunt rerum perferendis, inventore.</td>
+                            </tr>
+
+                            <tr>
+                                <td><img src="http://lorempixel.com/100/100/people/9" alt="" /></td>
+                                <td>Jane Smith</td>
+                                <td>jane.smith@foo.com</td>
+                                <td>01 800 2000</td>
+                                <td> Culpa praesentium unde pariatur fugit eos recusandae voluptas.</td>
+                            </tr>
+
+                            <tr>
+                                <td><img src="http://lorempixel.com/100/100/people/3" alt="" /></td>
+                                <td>John Smith</td>
+                                <td>john.smith@foo.com</td>
+                                <td>01 800 2000</td>
+                                <td>Aut voluptatum accusantium, eveniet, sapiente quaerat adipisci consequatur maxime temporibus quas, dolorem impedit.</td>
+                            </tr>
+                        </table>
                     </div>
                 </div>
             </div>
