Change the username into a unique key
Front/Back check validity of a username in register and settings

Fix bug front email error message in profil.js

Tiny fix security into utils/profil.js and utils/reset_mail.js

--- a/views/profil.ejs
+++ b/views/profil.ejs
@@ -226,7 +226,8 @@
                     <div class="form-group">
                         <div class="col-xs-6">
                             <label for="email"><h4>Email</h4></label>
-                            <input type="email" class="form-control" name="email" id="email"
+                            <input type="email" class="form-control" style="text-transform:lowercase" name="email"
+                                   id="email"
                                    placeholder="<%= locals.email %>" title="Enter your email.">
                         </div>
                     </div>
