--- a/views/profil.ejs
+++ b/views/profil.ejs
@@ -60,7 +60,7 @@
 
             <div class="container_notif">
                 <!-- <a href="#" class="button notificationicon on"><div class="notification"></div></a> -->
-                <a href="#"><div class="notification"></div></a>
+                <div class="notification"></div>
                     <!-- <button>Increment Notifications</button> -->
             </div>
             <div class="notif_box">
