--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -2,6 +2,7 @@
 <html class=''>
 <head>
   <meta name="robots" content="noindex">
+  <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet"/>
   <link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
   <!-- <script src="/assets/js/jquery-1.11.1.min.js"></script> -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -15,10 +16,10 @@
 <script src="https://use.typekit.net/hoy3lrg.js"></script>
 <!-- <script>try{Typekit.load({ async: true });}catch(e){}</script> -->
 <link rel='stylesheet prefetch' href='https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css'><link rel='stylesheet prefetch' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.2/css/font-awesome.min.css'>
+<link href="/assets/css/notif.css" rel='stylesheet' type='text/css'/>
 <link href="/assets/css/bootstrap.css" rel='stylesheet' type='text/css' />
 <link href="/assets/css/chat.css" rel='stylesheet' type='text/css'/>
 <link href="/assets/css/style.css" rel='stylesheet' type='text/css' />
-<link href="/assets/css/notif.css" rel='stylesheet' type='text/css'/>
 
 
 
@@ -65,7 +66,7 @@
 
             <div class="container_notif">
                 <!-- <a href="#" class="button notificationicon on"><div class="notification"></div></a> -->
-                <a href="#"><div class="notification"></div></a>
+                <div class="notification"></div>
                     <!-- <button>Increment Notifications</button> -->
             </div>
             <div class="notif_box">
@@ -172,6 +173,5 @@
 <script src="/assets/js/chat.js" language="JavaScript"></script>
 <script src="/assets/js/chat2.js" language="JavaScript"></script>
 <script src="/assets/js/notif.js" language="JavaScript"></script>
-
 
 </body></html>
