predefined list for tags added

--- a/views/nojs.ejs
+++ b/views/nojs.ejs
@@ -11,7 +11,7 @@
 
 <body>
 <div class="layout">
-    <div class="title">Javascript is disable</div>
+    <div class="title">Javascript is disabled</div>
     <div class="text icon_500">Matcha doesn't work very well without JavaScript. <br> Please review your settings</div>
 </div>
 </body>
