--- a/views/profil.ejs
+++ b/views/profil.ejs
@@ -264,8 +264,18 @@
                     <div class="form-group">
                         <div class="col-xs-6">
                             <label for="tags"><h4>Tags</h4></label>
-                            <input type="text" class="form-control" id="tags" placeholder="<%= locals.tags %>"
+                            <input type="text" list="browsers" class="form-control" id="tags"
+                                   placeholder="<%= locals.tags %>"
                                    title="Choose your tags">
+                            <datalist id="browsers">
+                                <option value="#chien ">
+                                <option value="#chat ">
+                                <option value="#bigCock ">
+                                <option value="#foodLover ">
+                                <option value="#travel ">
+                                <option value="#sport ">
+                                <option value="#aventure ">
+                            </datalist>
                         </div>
                     </div>
                     <div class="form-group">
@@ -343,6 +353,7 @@
                         </div>
                     </div>
 
+
                     <div class="form-group">
                         <div class="col-xs-12">
                             <br>
@@ -392,11 +403,38 @@
                             </tr>
 
                             <tr>
+                                <td><img src="http://lorempixel.com/100/100/people/3" alt=""/></td>
+                                <td>John Smith</td>
+                                <td>john.smith@foo.com</td>
+                                <td>01 800 2000</td>
+                                <td>Aut voluptatum accusantium, eveniet, sapiente quaerat adipisci consequatur maxime
+                                    temporibus quas, dolorem impedit.
+                                </td>
+                            </tr>
+                            <tr>
                                 <td><img src="http://lorempixel.com/100/100/people/3" alt="" /></td>
                                 <td>John Smith</td>
                                 <td>john.smith@foo.com</td>
                                 <td>01 800 2000</td>
                                 <td>Aut voluptatum accusantium, eveniet, sapiente quaerat adipisci consequatur maxime temporibus quas, dolorem impedit.</td>
+                            </tr>
+                            <tr>
+                                <td><img src="http://lorempixel.com/100/100/people/3" alt=""/></td>
+                                <td>John Smith</td>
+                                <td>john.smith@foo.com</td>
+                                <td>01 800 2000</td>
+                                <td>Aut voluptatum accusantium, eveniet, sapiente quaerat adipisci consequatur maxime
+                                    temporibus quas, dolorem impedit.
+                                </td>
+                            </tr>
+                            <tr>
+                                <td><img src="http://lorempixel.com/100/100/people/3" alt=""/></td>
+                                <td>John Smith</td>
+                                <td>john.smith@foo.com</td>
+                                <td>01 800 2000</td>
+                                <td>Aut voluptatum accusantium, eveniet, sapiente quaerat adipisci consequatur maxime
+                                    temporibus quas, dolorem impedit.
+                                </td>
                             </tr>
                         </table>
                     </div>
