--- a/views/index.ejs
+++ b/views/index.ejs
@@ -60,13 +60,12 @@
 
             <div class="container_notif">
                 <!-- <a href="#" class="button notificationicon on"><div class="notification"></div></a> -->
-                <a href="#"><div class="notification"></div></a>
+                <div class="notification"></div>
                     <!-- <button>Increment Notifications</button> -->
             </div>
             <div class="notif_box">
-                <ul>
-                    <li class="inside">M.x a visité votre profile</li>
-                    <li class="inside unread">Mme.y vous a liké</li>
+                <ul id="output_notif">
+
                 </ul>
             </div>
             <!--  TEST NOTIF ---------------------------->
@@ -176,7 +175,5 @@
 <script src="/node_modules/wowjs/dist/wow.min.js" language="JavaScript"></script>
 <script src="/assets/js/index.js" language="JavaScript"></script>
 <script src="/assets/js/notif.js" language="JavaScript"></script>
-
-
 </body>
 </html>
