--- a/views/single.ejs
+++ b/views/single.ejs
@@ -63,9 +63,8 @@
                     <!-- <button>Increment Notifications</button> -->
             </div>
             <div class="notif_box">
-                <ul>
-                    <li class="inside">M.x a visité votre profile</li>
-                    <li class="inside unread">Mme.y vous a liké</li>
+                <ul id="output_notif">
+
                 </ul>
             </div>
             <!--  TEST NOTIF ---------------------------->
