enlevé les warnings

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -69,7 +69,7 @@
                     </div>
                     <div>
                         <span>Password<label>*</label></span>
-                        <input id="login_password" type="password">
+                        <input id="login_password" type="password" autocomplete="on">
                     </div>
                     <a class="forgot" href="/forgot">Forgot Your Password?</a>
                     <input id="loginButton" type="submit" value="Login">
