--- a/views/profil.ejs
+++ b/views/profil.ejs
@@ -285,16 +285,20 @@
                     </div>
                     <div class="form-group">
                         <div class="col-xs-6">
+                            <form>
                             <label for="password"><h4>Password *</h4></label>
                             <input type="password" class="form-control" name="password" id="password"
-                                   placeholder="******" title="Enter your password.">
+                                   placeholder="******" title="Enter your password." autocomplete="on">
+                            </form>
                         </div>
                     </div>
                     <div class="form-group">
                         <div class="col-xs-6">
+                            <form>
                             <label for="password2"><h4>Verify *</h4></label>
                             <input type="password" class="form-control" name="password2" id="password2"
-                                   placeholder="******" title="Confirm your password.">
+                                   placeholder="******" title="Confirm your password." autocomplete="on">
+                            </form>
                         </div>
                     </div>
 
